--- a/node/node/Cargo.toml
+++ b/node/node/Cargo.toml
@@ -108,6 +108,7 @@ main-chain-follower-mock = { workspace = true, features = [
 tokio = { workspace = true }
 cli-commands = { workspace = true }
 sp-stake-distribution = { workspace = true, features = ["std"] }
+sp-block-participation = { workspace = true, features = ["std"] }
 
 [build-dependencies]
 substrate-build-script-utils = { workspace = true }
