--- a/e2e-tests/pytest.ini
+++ b/e2e-tests/pytest.ini
@@ -20,12 +20,12 @@ markers =
 junit_duration_report = call
 log_format = %(asctime)s %(levelname)-8s [logger=%(name)s, file=%(filename)s:%(lineno)d] %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S %Z
-log_cli = True
+log_cli = true
 log_cli_level = info
 log_file = debug.log
 log_file_level = debug
 log_file_format = %(asctime)s %(levelname)-8s [logger=%(name)s, file=%(filename)s:%(lineno)d] %(message)s
-log_file_date_format = %Y-%m-%d %H:%M:%S
+log_file_date_format = %Y-%m-%d %H:%M:%S %Z
 addopts = -ra
           --tb=short
           --show-capture=no
