--- a/e2e-tests/pytest.ini
+++ b/e2e-tests/pytest.ini
@@ -14,6 +14,7 @@ markers =
     committee_rotation: run tests for Committee Rotation feature
     committee_members: run tests for Committee Members feature
     mc_state_reference_block: run tests for Mainchain State Reference feature
+    block_production_log: run test for block production log pallet
     rpc: run tests for RPC endpoints
     substrate: run tests for Substrate framework core features
     test_key: key for xray
