Update rust to 1.85.0 and use 2024 edition

--- a/toolkit/mainchain-follower/mock/Cargo.toml
+++ b/toolkit/mainchain-follower/mock/Cargo.toml
@@ -28,7 +28,7 @@ std = [
 	"sidechain-domain/std",
 	"rand/std",
 	"sp-native-token-management?/std",
-	"sp-stake-distribution?/std"
+	"sp-stake-distribution?/std",
 ]
 block-source = []
 candidate-source = ["authority-selection-inherents"]
