--- a/toolkit/offchain/Cargo.toml
+++ b/toolkit/offchain/Cargo.toml
@@ -35,7 +35,10 @@ tokio-retry = { workspace = true }
 
 [dev-dependencies]
 env_logger = { workspace = true }
-fraction = { workspace = true, features = ["with-decimal", "with-serde-support"] }
+fraction = { workspace = true, features = [
+	"with-decimal",
+	"with-serde-support",
+] }
 proptest = { workspace = true }
 time = { workspace = true, features = ["std", "serde", "parsing"] }
 pretty_assertions = { workspace = true }
