--- a/toolkit/mainchain-follower/main-chain-follower-cli/Cargo.toml
+++ b/toolkit/mainchain-follower/main-chain-follower-cli/Cargo.toml
@@ -10,7 +10,10 @@ license = "Apache-2.0"
 clap = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-db-sync-follower = { workspace = true, features = ["block-source", "candidate-source"] }
+db-sync-follower = { workspace = true, features = [
+	"block-source",
+	"candidate-source",
+] }
 tokio = { workspace = true }
 env_logger = { workspace = true }
 log = { workspace = true }
