--- a/toolkit/pallets/address-associations/Cargo.toml
+++ b/toolkit/pallets/address-associations/Cargo.toml
@@ -25,20 +25,20 @@ hex-literal = { workspace = true }
 [features]
 default = ["std"]
 std = [
-    "frame-support/std",
-    "frame-system/std",
-    "log/std",
-    "parity-scale-codec/std",
-    "scale-info/std",
-    "sidechain-domain/std",
-    "sp-std/std",
-    "frame-benchmarking?/std",
+	"frame-support/std",
+	"frame-system/std",
+	"log/std",
+	"parity-scale-codec/std",
+	"scale-info/std",
+	"sidechain-domain/std",
+	"sp-std/std",
+	"frame-benchmarking?/std",
 ]
 runtime-benchmarks = [
-    "frame-benchmarking/runtime-benchmarks",
-    "frame-support/runtime-benchmarks",
-    "frame-system/runtime-benchmarks",
-    "sp-runtime/runtime-benchmarks",
-    "hex-literal",
-    "sp-core"
+	"frame-benchmarking/runtime-benchmarks",
+	"frame-support/runtime-benchmarks",
+	"frame-system/runtime-benchmarks",
+	"sp-runtime/runtime-benchmarks",
+	"hex-literal",
+	"sp-core",
 ]
