--- a/toolkit/primitives/consensus/aura/Cargo.toml
+++ b/toolkit/primitives/consensus/aura/Cargo.toml
@@ -2,7 +2,7 @@
 name = "sp-partner-chains-consensus-aura"
 version = "1.5.0"
 description = "Primitives required by Partner Chains customized Aura consensus"
-authors = [ "IOG "]
+authors = ["IOG "]
 homepage = "https://iohk.io/"
 edition = "2021"
 license = "Apache-2.0"
@@ -13,7 +13,7 @@ readme = "README.md"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-futures = {workspace = true}
+futures = { workspace = true }
 sp-consensus = { workspace = true }
 sp-consensus-slots = { workspace = true }
 sp-runtime = { optional = true, workspace = true }
@@ -24,8 +24,4 @@ sp-blockchain = { workspace = true }
 
 [features]
 default = ["std"]
-std = [
-	"sp-consensus-slots/std",
-	"sp-runtime/std",
-	"sp-inherents/std",
-]
+std = ["sp-consensus-slots/std", "sp-runtime/std", "sp-inherents/std"]
