--- a/toolkit/primitives/sidechain/Cargo.toml
+++ b/toolkit/primitives/sidechain/Cargo.toml
@@ -7,7 +7,7 @@ license = "Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-envy = { workspace = true, optional = true}
+envy = { workspace = true, optional = true }
 frame-support = { workspace = true }
 sidechain-domain = { workspace = true }
 parity-scale-codec = { workspace = true }
@@ -21,15 +21,15 @@ serde_json = { workspace = true, optional = true }
 [features]
 default = ["std"]
 std = [
-    "envy",
+	"envy",
 	"sp-api/std",
-    "frame-support/std",
-    "parity-scale-codec/std",
-    "scale-info/std",
+	"frame-support/std",
+	"parity-scale-codec/std",
+	"scale-info/std",
 	"sidechain-domain/std",
-    "sp-api/std",
-    "sp-runtime/std",
+	"sp-api/std",
+	"sp-runtime/std",
 	"serde",
 	"serde_json",
-	"sp-blockchain"
+	"sp-blockchain",
 ]
