test: one log file per worker
added:
- when tests are ran in parallel, each thread stores log separately to not overwrite debug.log file

changed:
- all test logs are now stored in e2e-tests/logs dir

--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -157,7 +157,7 @@ runs:
     - name: Check if no skipped tests
       if: ${{ inputs.tests == 'postmerge' }}
       run: |
-        skipped=$(jq -r .summary.skipped e2e-tests/.report.json)
+        skipped=$(jq -r .summary.skipped e2e-tests/logs/.report.json)
         if [ "$skipped" != "null" ]; then
           echo "Skipped tests found: $skipped. Check test logs for more information."
           exit 1
