--- a/e2e-tests/pytest.ini
+++ b/e2e-tests/pytest.ini
@@ -21,9 +21,9 @@ junit_duration_report = call
 log_format = %(asctime)s %(levelname)-8s [logger=%(name)s, file=%(filename)s:%(lineno)d] %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S %Z
 log_cli = true
-log_cli_level = info
-log_file = debug.log
-log_file_level = debug
+log_cli_level = INFO
+log_file = logs/debug.log
+log_file_level = DEBUG
 log_file_format = %(asctime)s %(levelname)-8s [logger=%(name)s, file=%(filename)s:%(lineno)d] %(message)s
 log_file_date_format = %Y-%m-%d %H:%M:%S %Z
 addopts = -ra
