fix: production log reading stale slot number
Signed-off-by: Nikolaos Dymitriadis <nikolaos.dymitriadis@iohk.io>

--- a/toolkit/primitives/block-production-log/Cargo.toml
+++ b/toolkit/primitives/block-production-log/Cargo.toml
@@ -12,6 +12,7 @@ sp-core = { workspace = true, optional = true }
 sp-inherents = { workspace = true }
 sp-runtime = { workspace = true }
 thiserror = { workspace = true }
+sidechain-slots = { workspace = true }
 
 [dev-dependencies]
 hex = { workspace = true }
