fix: production log reading stale slot number (#535)

--- a/toolkit/primitives/block-production-log/Cargo.toml
+++ b/toolkit/primitives/block-production-log/Cargo.toml
@@ -12,6 +12,7 @@ sp-core = { workspace = true, optional = true }
 sp-inherents = { workspace = true }
 sp-runtime = { workspace = true }
 thiserror = { workspace = true }
+sidechain-slots = { workspace = true }
 
 [dev-dependencies]
 hex = { workspace = true }
@@ -27,4 +28,5 @@ std = [
 	"sp-inherents/std",
 	"sp-runtime/std",
 	"sp-api/std",
+	"sidechain-slots/std"
 ]
