--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -12,7 +12,6 @@ inputs:
   markers:
     description: 'Run tests by markers (-m)'
     required: false
-    default: 'not active_flow and not passive_flow and not probability'
   mc_epoch:
     description: 'MC epoch to test (committee tests)'
     required: false
@@ -53,6 +52,11 @@ runs:
       continue-on-error: true
       shell: bash
       run: |
+        markers_switch=""
+        if [ -n "${{ inputs.markers }}" ]; then
+          markers_switch="-m '${{ inputs.markers }}'"
+        fi
+        
         mc_epoch_switch=""
         if [ -n "${{ inputs.mc_epoch }}" ]; then
           mc_epoch_switch="--mc-epoch '${{ inputs.mc_epoch }}'"
@@ -77,7 +81,7 @@ runs:
           --env '${{ inputs.env }}' \
           --log-cli-level '${{ inputs.log_level }}' \
           -k '${{ inputs.keyword }}' \
-          -m '${{ inputs.markers }}' \
+          ${markers_switch} \
           -n '${{ inputs.threads}}' \
           --dist=loadgroup \
           --ci-run \
