--- a/e2e-tests/pytest.ini
+++ b/e2e-tests/pytest.ini
@@ -6,8 +6,6 @@ markers =
     ariadne: run tests for Ariadne feature
     probability: run non deterministic tests
     block_reward: run tests for Block Rewards feature
-    active_flow: run tests for Active Flow feature
-    passive_flow: run tests for Passive Flow feature
     registration: run tests for Registration feature (permissioned and trustless)
     committee_distribution: run tests for Committee Distribution feature
     committee_rotation: run tests for Committee Rotation feature
@@ -30,5 +28,6 @@ log_file_date_format = %Y-%m-%d %H:%M:%S %Z
 addopts = -ra
           --tb=short
           --show-capture=no
+          --color=yes
 filterwarnings =
     ignore:invalid escape sequence '\\;':DeprecationWarning:.*tests.conftest:
