decouple the pallet from block production log
Signed-off-by: Nikolaos Dymitriadis <nikolaos.dymitriadis@iohk.io>

--- a/toolkit/primitives/sidechain-slots/Cargo.toml
+++ b/toolkit/primitives/sidechain-slots/Cargo.toml
@@ -32,7 +32,8 @@ std = [
 	'sp-blockchain',
     'sp-core/std',
     'sp-consensus-slots/std',
-    'envy'
+    'envy',
+    'serde'
 ]
 serde = [
     "dep:serde",
