Block participation followup changes (#541)

--- a/toolkit/primitives/sidechain-slots/Cargo.toml
+++ b/toolkit/primitives/sidechain-slots/Cargo.toml
@@ -32,7 +32,7 @@ std = [
 	'sp-blockchain',
     'sp-core/std',
     'sp-consensus-slots/std',
-    'envy'
+    'envy',
 ]
 serde = [
     "dep:serde",
