--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -218,6 +218,7 @@ jobs:
         uses: ./.github/actions/artifacts/copy-to-binary-host
         with:
           sha: ${{ needs.build-linux-pre-merge.outputs.sha }}
+          env: "ci-preview"
           AWS_REGION: "eu-central-1"
           AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
           kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
