--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,6 +89,7 @@ jobs:
         with:
           sha: ${{ inputs.sha }}
           env: "staging"
+        env:
           AWS_REGION: "eu-central-1"
           AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
           kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
