test: do not run native token on last post merge run
changed:
- post-merge CI action excludes native token tests because they're skipped (were executed earlier) and that was causing job to fail (we expect no skipped tests on last run

--- a/.github/actions/tests/local-environment-tests/action.yml
+++ b/.github/actions/tests/local-environment-tests/action.yml
@@ -153,6 +153,7 @@ runs:
         mc_epoch: 3
         init_timestamp: ${{ env.INIT_TIMESTAMP }}
         blockchain: substrate
+        markers: "not active_flow and not passive_flow and not probability and not native_token"
         local-environment: "true"
     - name: Check if no skipped tests
       if: ${{ inputs.tests == 'postmerge' }}
