fix: ci-preview binary path

--- a/.github/actions/tests/run-e2e-tests/action.yml
+++ b/.github/actions/tests/run-e2e-tests/action.yml
@@ -5,6 +5,9 @@ inputs:
   env:
     description: 'Test environment'
     required: true
+  sha:
+    description: 'Binary SHA'
+    required: false
   keyword:
     description: 'Run tests by keyword (-k)'
     required: false
