--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,32 @@ jobs:
             fi
           done
 
+  copy-to-binary-host:
+    permissions:
+      id-token: write
+      contents: write
+    needs: download-from-s3
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Download binary 
+        uses: actions/download-artifact@v4
+        with:
+          name: partner-chains-node-linux-artifact 
+          path: partner-chains-node
+      - name: Copy to binary-host
+        uses: ./.github/actions/artifacts/copy-to-binary-host
+        with:
+          sha: ${{ inputs.sha }}
+          env: "staging"
+        env:
+          AWS_REGION: "eu-central-1"
+          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+          K8S_SERVER: ${{ secrets.K8S_SERVER }}
+          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
+
   create-draft-release:
     if: ${{ !inputs.no-release }}
     permissions:
