fix: move copy step to obtain sha

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -260,8 +260,20 @@ jobs:
           earthly -P +ci-post-merge --image=${{ secrets.ECR_REGISTRY_SECRET }}/partner-chains-node --tags="${{ steps.get_sha.outputs.sha }} latest"
       - name: Rename artifact
         run: |
+          cp ./to-build/partner-chains-node ./partner-chains-node
           cp ./to-build/partner-chains-node ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
           chmod +x ./to-build/partner-chains-node-${{ steps.get_sha.outputs.sha }}-x86_64-linux
+      - name: Copy to binary-host
+        uses: ./.github/actions/artifacts/copy-to-binary-host
+        with:
+          sha: ${{ steps.get_sha.outputs.sha }}
+          env: "ci-preview"
+        env:
+          AWS_REGION: "eu-central-1"
+          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
+          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
+          K8S_SERVER: ${{ secrets.K8S_SERVER }}
+          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
       - name: Upload partner-chains-node artifact
         uses: actions/upload-artifact@v4
         with:
@@ -482,22 +494,6 @@ jobs:
         with:
           fetch-depth: 0
           ref: master
-      - name: Download binary 
-        uses: actions/download-artifact@v4
-        with:
-          name: partner-chains-node-linux-artifact
-          path: partner-chains-node
-      - name: Copy to binary-host
-        uses: ./.github/actions/artifacts/copy-to-binary-host
-        with:
-          sha: ${{ needs.build-linux-post-merge.outputs.sha }}
-          env: "ci-preview"
-        env:
-          AWS_REGION: "eu-central-1"
-          AWS_ROLE_ARN_SECRET: ${{ secrets.AWS_ROLE_ARN_SECRET }}
-          kubeconfig_base64: ${{ secrets.kubeconfig_base64 }}
-          K8S_SERVER: ${{ secrets.K8S_SERVER }}
-          K8S_SA_TOKEN: ${{ secrets.K8S_SA_TOKEN }}
       - name: Deploy and test against ci-preview
         uses: ./.github/actions/tests/run-e2e-tests
         with:
