--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,9 +88,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: partner-chains-node-linux-artifact 
-          path: partner-chains-node-binary
-      - name: debug
-        run: ls -la && ls -la partner-chains-node-binary
+          path: partner-chains-node-linux-artifact
+      - name: Place binary
+        run: cp ./partner-chains-node-linux-artifact/* partner-chains-node-binary
         shell: bash 
       - name: Copy to binary-host
         uses: ./.github/actions/artifacts/copy-to-binary-host
